--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,9 +3,7 @@
 }
 
 .infoBox {
-    border: ridge black;
-    margin-bottom: 1px;
-    height: 220px;
+    margin-top: 3px;
 }
 
 .nav{
@@ -13,24 +11,33 @@
 }
 
 .lateral {
-    border: ridge black;
-    margin-bottom: 1px;
-    height: 441px;
+    margin-top: 3px;
 }
 
 footer {
     text-align: center;
-    border: ridge black;
+    border: 1px solid black;
     background-color: black;
     color: white;
+    height: 110px;
+    
 }
 
 .Slider {
-    border: ridge black;
-    margin-bottom: 1px;
+    margin-bottom: 10px;
     height: 110px;
     text-align: center;
     background-color: black;
     color: white;
 }
+
+p {
+    border: 1px solid black;
+    text-align: center
+}
+
+.midCont {
+    padding-left: 0;
+}
+
 
